--- a/public/о компании.html
+++ b/public/о компании.html
@@ -53,59 +53,62 @@
 <section class="section black-section" id="advantages">
   <div class="container">
     <h2 class="text-center mb-5" data-aos="fade-up">Наши преимущества</h2>
-    <div class="row g-4">
-      <div class="col-md-4" data-aos="fade-up" data-aos-delay="0">
-        <div class="text-center text-white">
-          <div class="advantage-icon">
-            <i class="fas fa-shield-alt"></i>
+    <div class="advantages-wrapper" style="background: linear-gradient(135deg, rgba(26, 26, 26, 0.9) 0%, rgba(42, 42, 42, 0.9) 100%); border-radius: 20px; overflow: hidden; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3); transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); cursor: pointer; position: relative; border: 1px solid rgba(255, 255, 255, 0.1); padding: 2rem;">
+      <div class="advantages-wrapper-before" style="content: ''; position: absolute; top: 0; left: -100%; width: 100%; height: 100%; background: linear-gradient(90deg, transparent, rgba(247, 7, 255, 0.1), transparent); transition: left 0.5s;"></div>
+      <div class="row g-4">
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="0">
+          <div class="text-center text-white">
+            <div class="advantage-icon">
+              <i class="fas fa-shield-alt"></i>
+            </div>
+            <h5>Безопасность сделок</h5>
+            <p>Полное юридическое сопровождение и гарантия безопасности всех операций</p>
           </div>
-          <h5>Безопасность сделок</h5>
-          <p>Полное юридическое сопровождение и гарантия безопасности всех операций</p>
         </div>
-      </div>
-      <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-        <div class="text-center text-white">
-          <div class="advantage-icon">
-            <i class="fas fa-clock"></i>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="text-center text-white">
+            <div class="advantage-icon">
+              <i class="fas fa-clock"></i>
+            </div>
+            <h5>Экономия времени</h5>
+            <p>Быстрый подбор объектов и оперативное оформление документов</p>
           </div>
-          <h5>Экономия времени</h5>
-          <p>Быстрый подбор объектов и оперативное оформление документов</p>
         </div>
-      </div>
-      <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
-        <div class="text-center text-white">
-          <div class="advantage-icon">
-            <i class="fas fa-percent"></i>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="text-center text-white">
+            <div class="advantage-icon">
+              <i class="fas fa-percent"></i>
+            </div>
+            <h5>Выгодные условия</h5>
+            <p>Конкурентные цены и индивидуальный подход к каждому клиенту</p>
           </div>
-          <h5>Выгодные условия</h5>
-          <p>Конкурентные цены и индивидуальный подход к каждому клиенту</p>
         </div>
-      </div>
-      <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-        <div class="text-center text-white">
-          <div class="advantage-icon">
-            <i class="fas fa-users"></i>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+          <div class="text-center text-white">
+            <div class="advantage-icon">
+              <i class="fas fa-users"></i>
+            </div>
+            <h5>Опытная команда</h5>
+            <p>Профессиональные риелторы с многолетним опытом работы</p>
           </div>
-          <h5>Опытная команда</h5>
-          <p>Профессиональные риелторы с многолетним опытом работы</p>
         </div>
-      </div>
-      <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
-        <div class="text-center text-white">
-          <div class="advantage-icon">
-            <i class="fas fa-database"></i>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
+          <div class="text-center text-white">
+            <div class="advantage-icon">
+              <i class="fas fa-database"></i>
+            </div>
+            <h5>Большая база</h5>
+            <p>Широкий выбор объектов недвижимости в разных ценовых категориях</p>
           </div>
-          <h5>Большая база</h5>
-          <p>Широкий выбор объектов недвижимости в разных ценовых категориях</p>
         </div>
-      </div>
-      <div class="col-md-4" data-aos="fade-up" data-aos-delay="500">
-        <div class="text-center text-white">
-          <div class="advantage-icon">
-            <i class="fas fa-headset"></i>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="500">
+          <div class="text-center text-white">
+            <div class="advantage-icon">
+              <i class="fas fa-headset"></i>
+            </div>
+            <h5>Поддержка 24/7</h5>
+            <p>Круглосуточная поддержка клиентов и оперативное решение вопросов</p>
           </div>
-          <h5>Поддержка 24/7</h5>
-          <p>Круглосуточная поддержка клиентов и оперативное решение вопросов</p>
         </div>
       </div>
     </div>
@@ -116,22 +119,25 @@
 <section class="section" id="stats">
   <div class="container">
     <h2 class="text-center mb-5" data-aos="fade-up">Наша статистика</h2>
-    <div class="row text-center">
-      <div class="col-md-3 col-6 mb-4" data-aos="zoom-in" data-aos-delay="0">
-        <div class="stat-number">1000+</div>
-        <div class="stat-label">Успешных сделок</div>
-      </div>
-      <div class="col-md-3 col-6 mb-4" data-aos="zoom-in" data-aos-delay="100">
-        <div class="stat-number">10+</div>
-        <div class="stat-label">Лет опыта</div>
-      </div>
-      <div class="col-md-3 col-6 mb-4" data-aos="zoom-in" data-aos-delay="200">
-        <div class="stat-number">500+</div>
-        <div class="stat-label">Довольных клиентов</div>
-      </div>
-      <div class="col-md-3 col-6 mb-4" data-aos="zoom-in" data-aos-delay="300">
-        <div class="stat-number">24/7</div>
-        <div class="stat-label">Поддержка клиентов</div>
+    <div class="stats-wrapper" style="background: linear-gradient(135deg, rgba(26, 26, 26, 0.9) 0%, rgba(42, 42, 42, 0.9) 100%); border-radius: 20px; overflow: hidden; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3); transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); cursor: pointer; position: relative; border: 1px solid rgba(255, 255, 255, 0.1); padding: 2rem;">
+      <div class="stats-wrapper-before" style="content: ''; position: absolute; top: 0; left: -100%; width: 100%; height: 100%; background: linear-gradient(90deg, transparent, rgba(247, 7, 255, 0.1), transparent); transition: left 0.5s;"></div>
+      <div class="row text-center">
+        <div class="col-md-3 col-6 mb-4" data-aos="zoom-in" data-aos-delay="0">
+          <div class="stat-number">1000+</div>
+          <div class="stat-label">Успешных сделок</div>
+        </div>
+        <div class="col-md-3 col-6 mb-4" data-aos="zoom-in" data-aos-delay="100">
+          <div class="stat-number">10+</div>
+          <div class="stat-label">Лет опыта</div>
+        </div>
+        <div class="col-md-3 col-6 mb-4" data-aos="zoom-in" data-aos-delay="200">
+          <div class="stat-number">500+</div>
+          <div class="stat-label">Довольных клиентов</div>
+        </div>
+        <div class="col-md-3 col-6 mb-4" data-aos="zoom-in" data-aos-delay="300">
+          <div class="stat-number">24/7</div>
+          <div class="stat-label">Поддержка клиентов</div>
+        </div>
       </div>
     </div>
   </div>
@@ -141,72 +147,75 @@
 <section class="section black-section" id="reviews">
   <div class="container">
     <h2 class="text-center mb-5" data-aos="fade-up">Отзывы наших клиентов</h2>
-    <div class="row g-4">
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="0">
-        <div class="review-card">
-          <div class="review-header">
-            <img src="" class="review-avatar" alt="Юрий" loading="lazy">
-            <div class="review-info">
-              <h5>Юрий</h5>
-              <div class="review-rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
+    <div class="reviews-wrapper" style="background: linear-gradient(135deg, rgba(26, 26, 26, 0.9) 0%, rgba(42, 42, 42, 0.9) 100%); border-radius: 20px; overflow: hidden; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3); transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); cursor: pointer; position: relative; border: 1px solid rgba(255, 255, 255, 0.1); padding: 2rem;">
+      <div class="reviews-wrapper-before" style="content: ''; position: absolute; top: 0; left: -100%; width: 100%; height: 100%; background: linear-gradient(90deg, transparent, rgba(247, 7, 255, 0.1), transparent); transition: left 0.5s;"></div>
+      <div class="row g-4">
+        <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="0">
+          <div class="review-card">
+            <div class="review-header">
+              <img src="" class="review-avatar" alt="Юрий" loading="lazy">
+              <div class="review-info">
+                <h5>Юрий</h5>
+                <div class="review-rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="review-content">
-            <p>"Огромное спасибо агентству АН Фаттория за профессиональную помощь в покупке квартиры! Все этапы сделки были проведены четко и прозрачно. Особенно порадовала скорость работы и внимательное отношение к нашим пожеланиям."</p>
-            <div class="review-service">Услуга: Покупка квартиры</div>
-            <button class="btn btn-outline-warning btn-sm" data-bs-toggle="modal" data-bs-target="#reviewModal1">Читать полностью</button>
+            <div class="review-content">
+              <p>"Огромное спасибо агентству АН Фаттория за профессиональную помощь в покупке квартиры! Все этапы сделки были проведены четко и прозрачно. Особенно порадовала скорость работы и внимательное отношение к нашим пожеланиям."</p>
+              <div class="review-service">Услуга: Покупка квартиры</div>
+              <button class="btn btn-outline-warning btn-sm" data-bs-toggle="modal" data-bs-target="#reviewModal1">Читать полностью</button>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-        <div class="review-card">
-          <div class="review-header">
-            <img src="" class="review-avatar" alt="Михаил" loading="lazy">
-            <div class="review-info">
-              <h5>Михаил</h5>
-              <div class="review-rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
+        <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="review-card">
+            <div class="review-header">
+              <img src="" class="review-avatar" alt="Михаил" loading="lazy">
+              <div class="review-info">
+                <h5>Михаил</h5>
+                <div class="review-rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="review-content">
-            <p>"Работали с агентством по продаже коммерческой недвижимости. Все документы были оформлены правильно, цена была максимально выгодной. Рекомендую всем, кто ищет надежных партнеров в сфере недвижимости!"</p>
-            <div class="review-service">Услуга: Продажа коммерческой недвижимости</div>
-            <button class="btn btn-outline-warning btn-sm" data-bs-toggle="modal" data-bs-target="#reviewModal2">Читать полностью</button>
+            <div class="review-content">
+              <p>"Работали с агентством по продаже коммерческой недвижимости. Все документы были оформлены правильно, цена была максимально выгодной. Рекомендую всем, кто ищет надежных партнеров в сфере недвижимости!"</p>
+              <div class="review-service">Услуга: Продажа коммерческой недвижимости</div>
+              <button class="btn btn-outline-warning btn-sm" data-bs-toggle="modal" data-bs-target="#reviewModal2">Читать полностью</button>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
-        <div class="review-card">
-          <div class="review-header">
-            <img src="" class="review-avatar" alt="Елена" loading="lazy">
-            <div class="review-info">
-              <h5>Елена</h5>
-              <div class="review-rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
+        <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+          <div class="review-card">
+            <div class="review-header">
+              <img src="" class="review-avatar" alt="Елена" loading="lazy">
+              <div class="review-info">
+                <h5>Елена</h5>
+                <div class="review-rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="review-content">
-            <p>"Спасибо за помощь в получении ипотеки! Специалисты агентства помогли собрать все необходимые документы и подобрали оптимальные условия кредитования. Сделка прошла гладко и без задержек."</p>
-            <div class="review-service">Услуга: Ипотечное кредитование</div>
-            <button class="btn btn-outline-warning btn-sm" data-bs-toggle="modal" data-bs-target="#reviewModal3">Читать полностью</button>
+            <div class="review-content">
+              <p>"Спасибо за помощь в получении ипотеки! Специалисты агентства помогли собрать все необходимые документы и подобрали оптимальные условия кредитования. Сделка прошла гладко и без задержек."</p>
+              <div class="review-service">Услуга: Ипотечное кредитование</div>
+              <button class="btn btn-outline-warning btn-sm" data-bs-toggle="modal" data-bs-target="#reviewModal3">Читать полностью</button>
+            </div>
           </div>
         </div>
       </div>
@@ -313,6 +322,24 @@
     </div>
   </div>
 </div>
+
+<style>
+.advantages-wrapper:hover {
+  transform: translateY(-10px) scale(1.02);
+  box-shadow: 0 20px 40px rgba(247, 7, 255, 0.2);
+  border-color: rgba(247, 7, 255, 0.3);
+}
+.stats-wrapper:hover {
+  transform: translateY(-10px) scale(1.02);
+  box-shadow: 0 20px 40px rgba(247, 7, 255, 0.2);
+  border-color: rgba(247, 7, 255, 0.3);
+}
+.reviews-wrapper:hover {
+  transform: translateY(-10px) scale(1.02);
+  box-shadow: 0 20px 40px rgba(247, 7, 255, 0.2);
+  border-color: rgba(247, 7, 255, 0.3);
+}
+</style>
 
 <div id="footer-placeholder"></div>
 
