--- a/public/404.html
+++ b/public/404.html
@@ -25,7 +25,7 @@
       align-items: center;
       justify-content: center;
       text-align: center;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #1a0033 0%, #000000 100%);
       color: white;
     }
     .error-code {
@@ -64,50 +64,10 @@
 </head>
 <body>
 
-<!-- Навигация -->
-<nav class="navbar navbar-expand-lg fixed-top">
-  <div class="container">
-    <a class="navbar-brand text-white" href="index.html">АН ФАТТОРИЯ</a>
-    <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Недвижимость
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="загородная недвижимость.html">Загородная недвижимость</a></li>
-            <li><a class="dropdown-item" href="наши обьекты.html">Наши объекты</a></li>
-            <li><a class="dropdown-item" href="камерческая недвижимость.html">Коммерческая недвижимость</a></li>
-          </ul>
-        </li>
-        <li class="nav-item"><a class="nav-link" href="новостройки.html">Новостройки</a></li>
-        <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Юридическая
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="информация.html">Информация</a></li>
-            <li><a class="dropdown-item" href="о компании.html">О компании</a></li>
-            <li><a class="dropdown-item" href="сотрудники.html">Сотрудники</a></li>
-            <li><a class="dropdown-item" href="тарифная сетка.html">Тарифная сетка</a></li>
-            <li><a class="dropdown-item" href="учередители.html">Учредители</a></li>
-            <li><a class="dropdown-item" href="калькулятор-ипотеки.html">Калькулятор ипотеки</a></li>
-          </ul>
-        </li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Контакты</a></li>
-      </ul>
-      <div class="navbar-phone d-flex align-items-center">
-        <a href="tel:+375447025267">+375 (44) 702-52-67</a>
-        <button class="btn btn-warning btn-sm" data-bs-toggle="modal" data-bs-target="#testDriveModal">Заказать звонок</button>
-      </div>
-    </div>
-  </div>
-</nav>
+<!-- Skip to content link -->
+<a href="#main-content" class="skip-link">Перейти к основному содержимому</a>
+
+<div id="header-placeholder"></div>
 
 <!-- Секция ошибки -->
 <section class="error-section">
@@ -127,6 +87,8 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+<!-- Загрузчик header -->
+<script src="js/header-loader.js" defer></script>
 <!-- Компонентный загрузчик -->
 <script src="js/load-components.js" defer></script>
 <!-- Common JavaScript -->
