--- a/public/наши обьекты.html
+++ b/public/наши обьекты.html
@@ -15,6 +15,8 @@
   <!-- Объединенные стили для index -->
   <link rel="stylesheet" href="../css/index-combined.css">
   <link rel="stylesheet" href="../css/nashi-obekty.css">
+  <!-- Yandex Maps API -->
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=YOUR_YANDEX_MAPS_API_KEY&lang=ru_RU" type="text/javascript"></script>
 </head>
 <body>
 
@@ -159,34 +161,130 @@
 </section>
 
 <!-- Секция объектов -->
-<section class="container py-5">
-  <div class="view-options">
-    <button class="view-btn active" id="gridView">
-      <i class="fas fa-th"></i> Сетка
-    </button>
-    <button class="view-btn" id="listView">
-      <i class="fas fa-list"></i> Список
-    </button>
+<section class="container py-5" id="propertiesListSection">
+  <!-- Loading indicator -->
+  <div id="loadingIndicator" class="text-center py-4" style="display: none;">
+    <div class="spinner-border text-warning" role="status">
+      <span class="visually-hidden">Загрузка...</span>
+    </div>
+    <p class="mt-2">Загружаем объекты...</p>
   </div>
 
-  <div class="properties-container" id="propertiesContainer">
-    <!-- Объекты будут загружены динамически из API realt.by -->
+  <!-- Error message -->
+  <div id="errorMessage" class="alert alert-danger" style="display: none;">
+    <h5>Ошибка загрузки</h5>
+    <p>Не удалось загрузить объекты. Попробуйте обновить страницу или изменить фильтры.</p>
   </div>
 
-  <!-- Пагинация -->
-  <nav aria-label="Page navigation">
-    <ul class="pagination">
-      <li class="page-item disabled">
-        <a class="page-link" href="#" tabindex="-1">Назад</a>
-      </li>
-      <li class="page-item active"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item">
-        <a class="page-link" href="#">Вперед</a>
-      </li>
-    </ul>
-  </nav>
+  <!-- Properties slider container -->
+  <div class="properties-slider-container">
+    <div class="properties-container" id="propertiesContainer">
+      <!-- Объекты будут загружены динамически из API realt.by -->
+    </div>
+
+    <!-- Slider navigation -->
+    <div class="slider-navigation">
+      <button class="slider-btn slider-prev" id="prevBtn" disabled>
+        <i class="fas fa-chevron-left"></i>
+      </button>
+      <div class="slider-indicators">
+        <span id="currentPage">1</span> / <span id="totalPages">1</span>
+      </div>
+      <button class="slider-btn slider-next" id="nextBtn">
+        <i class="fas fa-chevron-right"></i>
+      </button>
+    </div>
+  </div>
+</section>
+
+<!-- Property Detail View -->
+<section class="container py-5" id="propertyDetailSection" style="display: none;">
+  <div class="row">
+    <div class="col-lg-8">
+      <!-- Property Gallery -->
+      <div class="property-gallery mb-4" id="propertyGallery">
+        <div class="main-image-container">
+          <img id="mainPropertyImage" src="https://via.placeholder.com/800x600?text=Загрузка..." alt="Главное фото" class="img-fluid rounded">
+        </div>
+        <div class="thumbnail-gallery" id="thumbnailGallery">
+          <!-- Thumbnails will be loaded here -->
+        </div>
+      </div>
+
+      <!-- Property Info -->
+      <div class="property-details-card" id="propertyDetails">
+        <h1 id="propertyTitle">Загрузка...</h1>
+        <p class="location" id="propertyLocation">
+          <i class="fas fa-map-marker-alt"></i> Загрузка...
+        </p>
+        <div class="price" id="propertyPrice">Загрузка...</div>
+
+        <div class="features-grid" id="propertyFeatures">
+          <!-- Features will be loaded here -->
+        </div>
+
+        <div class="description-section">
+          <h3>Описание</h3>
+          <div id="propertyDescription">Загрузка...</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-4">
+      <!-- Contact Form -->
+      <div class="contact-card">
+        <h4>Заинтересованы в объекте?</h4>
+        <form id="contactForm">
+          <div class="mb-3">
+            <input type="text" class="form-control" name="name" placeholder="Ваше имя" required>
+          </div>
+          <div class="mb-3">
+            <input type="tel" class="form-control" name="phone" placeholder="Ваш телефон" required>
+          </div>
+          <div class="mb-3">
+            <input type="email" class="form-control" name="email" placeholder="Email (необязательно)">
+          </div>
+          <div class="mb-3">
+            <textarea class="form-control" name="message" rows="3" placeholder="Ваше сообщение"></textarea>
+          </div>
+          <div class="form-check mb-3">
+            <input class="form-check-input" type="checkbox" id="agreeCheck" required>
+            <label class="form-check-label" for="agreeCheck">
+              Даю согласие на обработку персональных данных
+            </label>
+          </div>
+          <button type="submit" class="btn btn-warning w-100">Отправить запрос</button>
+        </form>
+      </div>
+
+      <!-- Agent Info -->
+      <div class="agent-card" id="agentInfo">
+        <h5>Контактное лицо</h5>
+        <div class="agent-details">
+          <div class="agent-avatar">
+            <i class="fas fa-user-circle fa-3x"></i>
+          </div>
+          <div>
+            <div class="agent-name" id="agentName">Загрузка...</div>
+            <div class="agent-phone" id="agentPhone">Загрузка...</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Map -->
+      <div class="map-card">
+        <h5>Расположение объекта</h5>
+        <div id="propertyMap" style="height: 250px; width: 100%; border-radius: 8px;"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Back to list button -->
+  <div class="text-center mt-4">
+    <button id="backToListBtn" class="btn btn-outline-primary">
+      <i class="fas fa-arrow-left"></i> Вернуться к списку объектов
+    </button>
+  </div>
 </section>
 
 <!-- Преимущества -->
@@ -240,6 +338,149 @@
 <!-- Main Combined JavaScript -->
 <script src="../js/main-combined.js"></script>
 <script src="../js/nashi-obekty.js"></script>
+
+<style>
+.property-gallery {
+  margin-bottom: 2rem;
+}
+
+.main-image-container {
+  margin-bottom: 1rem;
+}
+
+.main-image-container img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.thumbnail-gallery {
+  display: flex;
+  gap: 0.5rem;
+  overflow-x: auto;
+  padding: 0.5rem 0;
+}
+
+.thumbnail-gallery img {
+  width: 80px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 4px;
+  cursor: pointer;
+  opacity: 0.7;
+  transition: opacity 0.3s;
+}
+
+.thumbnail-gallery img.active,
+.thumbnail-gallery img:hover {
+  opacity: 1;
+}
+
+.property-details-card {
+  background: white;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  margin-bottom: 2rem;
+}
+
+.property-details-card h1 {
+  color: #333;
+  margin-bottom: 0.5rem;
+}
+
+.location {
+  color: #666;
+  margin-bottom: 1rem;
+}
+
+.price {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #ffc107;
+  margin-bottom: 1.5rem;
+}
+
+.features-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 0.5rem;
+  margin-bottom: 2rem;
+}
+
+.feature-item {
+  background: #f8f9fa;
+  padding: 0.5rem;
+  border-radius: 4px;
+  font-size: 0.9rem;
+}
+
+.description-section {
+  margin-top: 2rem;
+}
+
+.description-section h3 {
+  margin-bottom: 1rem;
+  color: #333;
+}
+
+.contact-card,
+.agent-card,
+.map-card {
+  background: white;
+  padding: 1.5rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  margin-bottom: 1.5rem;
+}
+
+.agent-details {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.agent-avatar {
+  color: #ffc107;
+}
+
+.agent-name {
+  font-weight: bold;
+  margin-bottom: 0.25rem;
+}
+
+.agent-phone a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.agent-phone a:hover {
+  text-decoration: underline;
+}
+
+.map-card #propertyMap {
+  margin-top: 1rem;
+}
+
+@media (max-width: 768px) {
+  .property-gallery {
+    margin-bottom: 1rem;
+  }
+
+  .main-image-container img {
+    height: 250px;
+  }
+
+  .property-details-card {
+    padding: 1rem;
+  }
+
+  .features-grid {
+    grid-template-columns: 1fr;
+  }
+}
+</style>
 
 <!-- Плавающая кнопка чата Telegram -->
 <div class="telegram-chat-widget">
