--- a/public/сотрудники.html
+++ b/public/сотрудники.html
@@ -158,6 +158,14 @@
   </div>
 </section>
 
+<style>
+.team-section .team-member:hover {
+  transform: translateY(-10px) scale(1.02);
+  box-shadow: 0 20px 40px rgba(247, 7, 255, 0.2);
+  border-color: rgba(247, 7, 255, 0.3);
+}
+</style>
+
 <div id="footer-placeholder"></div>
 
 <!-- Bootstrap JS -->
